--- a/_posts/2021-01-10-abc188.md
+++ b/_posts/2021-01-10-abc188.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: "AtCoder Beginner Contest 188 Review"
-description: "The Review of AtCoder Beginner Contest 118"
+description: "The Review of AtCoder Beginner Contest 118 as the First Post"
 categories: [Contests]
-tags: [random, jekyll]
+tags: [algorithm, dp]
 redirect_from:
-  - /2013/04/22/
+  - /2021/01/10/
 ---
 [AtCoder Beginner Contest 188](https://atcoder.jp/contests/abc188)
 
@@ -39,7 +39,7 @@ redirect_from:
 
 이 문제는 오래 고민해서 풀었다. 시간 내에 거의 다 풀었는데 WA여서 너무 아쉽다. 틀린 이유는 또또또 <strong>long long 과 배열 크기!</strong>  (사실 20만 개 들어오는 경우는 테스트 케이스에 없었던 것 같다. )
 
-알고리즘은 맞았다. 알고리즘 구현에 있어서 어려움을 조금 겪었다. 최솟값을 사용해야 해서 priority_queue를 쓰려고 했는데 순회가 안 되기 때문에 쓸 수 없었다. 사실 삭제 없이 업데이트만 하면 되기 때문에 vector를 쓰고 최솟값을 따로 업데이트 하면 되는 것이었당!
+알고리즘은 맞았다. 알고리즘 구현에서 어려움을 조금 겪었다. 최솟값을 사용해야 해서 priority_queue를 쓰려고 했는데 순회가 안 되기 때문에 쓸 수 없었다. 사실 삭제 없이 업데이트만 하면 되기 때문에 vector를 쓰고 최솟값을 따로 업데이트 하면 되는 것이었당!
 
 i번째 마을에 도착하기 전까지 가장 싸게 살 수 있는 값을 저장하고, i번째 마을에서 판다고 했을 때 이득의 최댓값을 찾는 방법으로 풀었다. 적어도 한 개의 도로로 이동해야 하므로 i번째 마을에서 사는 것은 포함하지 않는다.  
 <i>By traversing Road 
@@ -66,7 +66,7 @@ i
 
 읽어보지도 못했다.
 
-#
+#  
 ## 다음에 더 신경 쓸 점은  
 1. 최대/최소를 사용하고 element를 여러 개를 저장한다고 priority_queue를 쓰는 것이 아니다. priority_queue는 삭제를 하는 순서대로 최대/최소를 사용할 때 사용하자!
 2. 단순하게 최대/최소를 사용할 때에는 element들을 vector나 배열에 저장하고 여러 개를 최대/최소를 따로 업데이트하자!
